Make anchor compatible with jitpack (#1)